--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.20"
+    ext {
+        kotlin_version = "1.5.20"
+        coroutines_version = "1.5.0"
+        retrofit_version = "2.9.0"
+        moshi_version = "1.12.0"
+        junit_version = "4.13.2"
+        okhttp_version = "4.9.1"
+        glide_version = "4.12.0"
+    }
     repositories {
         google()
         mavenCentral()
