--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -50,6 +51,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-dynamic-features-fragment:2.3.5'
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation 'com.github.GrenderG:Toasty:1.5.0'
+
+    // Room
+    implementation 'androidx.room:room-runtime:2.3.0'
+    kapt 'androidx.room:room-compiler:2.3.0'
 
     implementation project(":api")
 
